<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_dashboard"/>
    <item
        android:id="@+id/nav_add"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/nav_add"/>
    <item
        android:id="@+id/nav_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_history"/>
    <item
        android:id="@+id/nav_stats"
        android:icon="@android:drawable/stat_sys_upload"
        android:title="@string/nav_stats"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile"/>
</menu>
